// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSectionTitle with outcomeType fail renders with alerting, badgeCount is 0 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        0 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="0"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType fail renders with alerting, badgeCount is 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        1 failure was detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="1"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType fail renders with alerting, badgeCount is greater than 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        2 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="2"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType fail renders with no-alerting 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType fail renders with no-alerting, shouldAlertFailuresCount is undefined 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 15
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="15"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType fail renders with no-alerting, titleSize=heading 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="heading"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="fail"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with alerting, badgeCount is 0 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        0 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="0"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with alerting, badgeCount is 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        1 failure was detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="1"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with alerting, badgeCount is greater than 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        2 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="2"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with no-alerting 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with no-alerting, shouldAlertFailuresCount is undefined 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 15
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="15"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType inapplicable renders with no-alerting, titleSize=heading 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="heading"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="inapplicable"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with alerting, badgeCount is 0 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        0 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="0"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with alerting, badgeCount is 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        1 failure was detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="1"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with alerting, badgeCount is greater than 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        2 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="2"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with no-alerting 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with no-alerting, shouldAlertFailuresCount is undefined 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 15
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="15"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType incomplete renders with no-alerting, titleSize=heading 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="heading"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="incomplete"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with alerting, badgeCount is 0 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        0 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="0"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with alerting, badgeCount is 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        1 failure was detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="1"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with alerting, badgeCount is greater than 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        2 failures were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="2"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with no-alerting 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with no-alerting, shouldAlertFailuresCount is undefined 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 15
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="15"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType pass renders with no-alerting, titleSize=heading 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="heading"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="pass"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with alerting, badgeCount is 0 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        0 instances to review were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="0"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with alerting, badgeCount is 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        1 instance to review was detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="1"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with alerting, badgeCount is greater than 1 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 
      <span
        role="alert"
      >
        2 instances to review were detected.
      </span>
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="2"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with no-alerting 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with no-alerting, shouldAlertFailuresCount is undefined 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 15
    </span>
    <span
      aria-hidden="true"
      class="title"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="15"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`ResultSectionTitle with outcomeType review renders with no-alerting, titleSize=heading 1`] = `
<DocumentFragment>
  <span
    class="resultSectionTitle"
  >
    <span
      class="screen-reader-only"
    >
      test title 10
    </span>
    <span
      aria-hidden="true"
      class="heading"
    >
      test title
    </span>
    <span
      aria-hidden="true"
      class="outcomeChipContainer"
    >
      <mock-outcomechip
        count="10"
        outcometype="review"
      />
    </span>
  </span>
</DocumentFragment>
`;
